# virya

./: README.md
base/: vannotate.h  varg.cpp  varg.h  vfile.cpp  vfile.h  vformat.h  vfuncentry.cpp  vfuncentry.h  vfuncentry_macro.h  vioman.cpp  vioman.h  vmacro.h  vmacro_compliance.h  vmacro_va.h  vstdlib.h  vstring.cpp  vstring.h  vsys.cpp  vsys.h  vtest.cpp  vtest.h  vtest_main.cpp  vtestcommon.cpp  vtestcommon.h  vtime.cpp  vtime.h  vutility.cpp  vutility.h
experimental/: vmemory.h
test/: CMakeLists.txt
test/base/: MRArg.cpp  MRArg.h  MRBaseEnm.h  MRCommon.h  MRException.cpp  MRException.h  MRFuncEntry.cpp  MRFuncEntry.h  MRFuncEntryMacro.h  MuRanCommonFuncs.cpp  MuRanCommonFuncs.h  main.cpp
test/src01/: vtest01.cpp  vtest02.cpp  vtest03.cpp  vtest05.cpp  vtest06.cpp
virya/: type_traits.h
